--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/jest-dom": "^5.16.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "aos": "^2.3.4",
         "bootstrap": "^5.1.3",
         "gh-pages": "^3.2.3",
         "react": "^17.0.2",
