--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/free-brands-svg-icons": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/react-fontawesome": "^0.1.18",
         "@testing-library/jest-dom": "^5.16.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "aos": "^2.3.4",
+        "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^5.1.3",
         "gh-pages": "^3.2.3",
         "react": "^17.0.2",
@@ -17,6 +22,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "redux": "^4.1.2",
+        "use-google-fonts": "^1.0.2",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
